--- a/templates/profile.html
+++ b/templates/profile.html
@@ -50,9 +50,18 @@
                             <div class="profile-buttons">
                                 <a href="{{ url_for('edit_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light blue"><i class="fas fa-pencil-alt"></i></a>
                                 <button>
-                                    <a data-target="modal1" class="btn-floating modal-trigger waves-effect waves-light red"><i class="fas fa-trash"></i></a>
+                                    <a data-target="{{ seed._id }}" class="btn-floating modal-trigger waves-effect waves-light red"><i class="fas fa-trash"></i></a>
                                 </button>
                             </div>
+                        </div>
+                    </div>
+                    <!-- Modal Structure -->
+                    <div id="{{ seed._id }}" class="modal">
+                        <div class="modal-content center-align">
+                            <h4>Are you sure that you want to delete this seed?</h4>
+                            <p>Click "Confirm" to delete or "Cancel" to go back.</p>
+                            <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="waves-effect waves-light btn green">Confirm</a>
+                            <a class="waves-effect waves-light btn">Cancel</a>
                         </div>
                     </div>
                 {% endfor %}
@@ -67,16 +76,6 @@
         </div>
         {% endif %}
 </div>
-
-<!-- Modal Structure -->
-<div id="modal1" class="modal">
-    <div class="modal-content center-align">
-      <h4>Are you sure that you want to delete this seed?</h4>
-      <p>Click "Confirm" to delete or "Cancel" to go back.</p>
-      <a href="{{ url_for('delete_seed', seed_id=seeds._id) }}" class="waves-effect waves-light btn green">Confirm</a>
-      <a class="waves-effect waves-light btn">Cancel</a>
-    </div>
-  </div>
     
 
 {% endblock %}
