--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}The Seed Shelf - Seeds{% endblock %}
+{% block nav_seeds %}active{% endblock %}
+{% block nav_seeds_mob %}active{% endblock %}
+
 {% block content %}
     <div class="site-container">
         <!-- Heading -->
