--- a/templates/add_seed.html
+++ b/templates/add_seed.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}The Seed Shelf - Add Seed{% endblock %}
+{% block nav_add %}active{% endblock %}
+{% block nav_add_mob %}active{% endblock %}
+
 {% block content %}
     <div>
         <h3 class="center-align">Add Seed</h3>
