--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block title %}The Seed Shelf - Home{% endblock %}
+{% block nav_home %}active{% endblock %}
+{% block nav_home_mob %}active{% endblock %}
 
 {% block content %}
 
