--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}The Seed Shelf - Log In{% endblock %}
+{% block nav_login %}active{% endblock %}
+{% block nav_login_mob %}active{% endblock %}
+
 {% block content %}
 
     <h3 class="center-align">Log In</h3>
