--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}The Seed Shelf - Profile{% endblock %}
+{% block nav_profile %}active{% endblock %}
+{% block nav_profile_mob %}active{% endblock %}
+
 {% block content %}
 
 <div class="container">
