--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}The Seed Shelf - Register{% endblock %}
+{% block nav_register %}active{% endblock %}
+{% block nav_register_mob %}active{% endblock %}
+
 {% block content %}
 
     <h3 class="center-align">Register</h3>
