--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -29,6 +29,7 @@
                         {% else %}
                         <option value="" disabled selected>Choose a seed type</option>
                         {% endif %}
+                            <option value="All">All</option>
                             <option value="Herbs">Herbs</option>
                             <option value="Fruit">Fruit</option>
                             <option value="Vegetables">Vegetables</option>
