--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,11 +14,11 @@
         </div>
         <div class="row profile">
             <!-- Heading -->
-            <div class="col s8 offset-s2">
+            <div class="col s12">
                 <h3 class="center-align">My Seeds</h3>
             </div>
             <!-- Add seed button -->
-            <div class="col s2">
+            <div class="fixed-action-btn">
                 <a href="{{ url_for('add_seed') }}" class="btn-floating btn-large waves-effect waves-light red"><i
                         class="fas fa-plus-circle"></i></a>
             </div>
