change font size of nav links and change color of mobile nav h4

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         
         <!-- Mobile sidenav - Code from Code Institute mini project -->
         <ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align light-blue-text text-darken-4">The Seed Shelf</h4></li>
+            <li><h4 class="center-align text-darken-4">The Seed Shelf</h4></li>
             <li class="{% block nav_home_mob %}{% endblock %}"><a href="{{ url_for('home') }}">Home</a></li>
                     <li class="{% block nav_seeds_mob %}{% endblock %}"><a href="{{ url_for('seeds') }}">Seeds</a></li>
                     <!-- If user is logged in show -->
