--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,10 @@ header {
   font-family: "Roboto Mono", sans-serif;
 }
 
+nav ul a {
+  font-size: 17px;
+}
+
 /* --------------- Images --------------- */
 .hero-image {
   height: 80vh;
