add no results found to seeds.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,6 +180,10 @@ opacity: 1;
   margin-bottom: 0;
 }
 
+.no-results {
+  text-align: center;
+}
+
 /* --------------- grow_seed.html --------------- */
 .edit-buttons{
   margin-top: 33px;
