--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,7 @@
                         <input id="username" name="username" type="text" minlength="5"
                          maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
+                        <span class="helper-text" data-error="Your username must be between 5 and 15 characters long and must contain only letters and numbers." data-success="Looks great">Your username must be between 5 and 15 characters long and must contain only letters and numbers.</span>
                     </div>
                 </div>
                 <!-- Password -->
@@ -26,6 +27,7 @@
                         <input id="password" name="password" type="password" minlength="5"
                          maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
+                        <span class="helper-text" data-error="Your password must be between 5 and 15 characters long and must contain only letters and numbers." data-success="Looks great">Your password must be between 5 and 15 characters long and must contain only letters and numbers.</span>
                     </div>
                 </div>
                 <!-- Register Button -->
