add required attribute to seed name in add seed and edit seed form

--- a/templates/add_seed.html
+++ b/templates/add_seed.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <!-- Seed Name -->
                     <div class="input-field col s6">
-                        <input placeholder="Seed Name" id="seed_name" name="seed_name" type="text" class="validate">
+                        <input placeholder="Seed Name" id="seed_name" name="seed_name" type="text" class="validate" required>
                         <label for="seed_name">Seed Name</label>
                     </div>
                     <!-- Seed Category -->
