--- a/templates/edit_seed.html
+++ b/templates/edit_seed.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <!-- Seed Name -->
                     <div class="input-field col s6">
-                        <input value="{{ seed.seed_name }}" placeholder="Seed Name" id="seed_name" name="seed_name" type="text" class="validate">
+                        <input value="{{ seed.seed_name }}" placeholder="Seed Name" id="seed_name" name="seed_name" type="text" class="validate" required>
                         <label for="seed_name">Seed Name</label>
                     </div>
                     <!-- Seed Category -->
