add seed category to description of seed

--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -30,6 +30,7 @@
             <p class="seed-description">{{ seed.seed_description }}</p>
             <hr>
             <p>Created by: {{ seed.created_by }}</p>
+            <p>Plant type: {{ seed.category_name }}</p>
         </div>
     </div>
     <div class="container">
