--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -4,7 +4,7 @@
 
 <div class="site-container">
     <div class="row">
-        <h3 class="col s12 offset-l2 l8 center-align">{{ seed.seed_name }}</h3>
+        <h3 class="col s12 offset-l2 l8 center-align">{{ seed.seed_name|title }}</h3>
     {% if session.user|lower == seed.created_by|lower or session.user|lower == "admin" %}
         <div class="col s12 l2 edit-buttons">
             <div>
