--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -11,7 +11,7 @@
         <!-- Search Bar -->
         <div class="row card-panel search-bar">
             <!-- Keyword search input field - Code was taken from the course content, Searching Lesson of Mini Project -->
-            <form action="{{ url_for('search') }}" method="post" class="col s12 m6">
+            <form id="search" action="{{ url_for('search') }}" method="post" class="col s12 m6">
                 <div class="row search-margin valign-wrapper center-align">
                     <div class="input-field col s12">
                         <i class="fas fa-search prefix"></i>
@@ -38,6 +38,10 @@
                     </select>
                 </div>
             </form>
+            <div class="col s12 search-buttons-container">
+                <a href="{{ url_for('seeds') }}" class="red btn">Reset <i class="fas fa-undo"></i></a>
+                <button type="submit" form="search" class="btn waves-effect green darken-3 waves-light search-button">Submit <i class="fas fa-check-circle"></i></button>
+            </div>
         </div>
 
         {% if seeds|length > 0 %}
