change button label from submit to search

--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -40,7 +40,7 @@
             </form>
             <div class="col s12 search-buttons-container">
                 <a href="{{ url_for('seeds') }}" class="red btn">Reset <i class="fas fa-undo"></i></a>
-                <button type="submit" form="search" class="btn waves-effect green darken-3 waves-light search-button">Submit <i class="fas fa-check-circle"></i></button>
+                <button type="submit" form="search" class="btn waves-effect green darken-3 waves-light search-button">Search <i class="fas fa-check-circle"></i></button>
             </div>
         </div>
 
