add aria-labels to buttons

--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -12,7 +12,7 @@
     <div class="col s12 center-align">
         <h4>It looks like something went wrong!</h4>
         <h5>Would you like us to take you home?</h5>
-        <a href="{{ url_for('home') }}" class="waves-effect waves-light btn green darken-3">Home</a>
+        <a href="{{ url_for('home') }}" class="waves-effect waves-light btn green darken-3" aria-label="Home">Home</a>
     </div>
 </div>
 </div>
