--- a/templates/add_seed.html
+++ b/templates/add_seed.html
@@ -64,7 +64,7 @@
                 <!-- Submit Button -->
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button class="btn waves-effect green darken-3 waves-light" type="submit">Submit
+                        <button class="btn waves-effect green darken-3 waves-light" type="submit" aria-label="submit button">Submit
                             <i class="far fa-arrow-alt-circle-right"></i>
                         </button>
                     </div>
