--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                 <p>Sign up for our weekly newsletter</p>
                 <form id="contactForm" onsubmit="return sendMail(this);">
                     <input type="email" name="email" id="emailaddress" placeholder="Email Address" class="form-control" required />
-                    <button type="submit" id="send-button"><i class="far fa-paper-plane"></i></button>    
+                    <button type="submit" id="send-button"><i class="far fa-paper-plane" aria-label="send button"></i></button>    
                 </form>
             </div>
             <!-- Social media links -->
