--- a/templates/edit_seed.html
+++ b/templates/edit_seed.html
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col s12 center-align">
                         <a href="{{ url_for('seeds') }}" class="btn waves-effect red">Cancel <i class="fas fa-times-circle"></i></a>
-                        <button class="btn waves-effect green darken-3 waves-light" type="submit">Edit Seed
+                        <button class="btn waves-effect green darken-3 waves-light" type="submit" aria-label="submit button">Edit Seed
                             <i class="fas fa-pencil-alt"></i>
                         </button>
                     </div>
