--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -11,7 +11,7 @@
                 <a href="{{ url_for('edit_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light blue"><i class="fas fa-pencil-alt"></i></a>
             </div>
             <div>
-                <button>
+                <button aria-label="delete button">
                     <a data-target="modal1" class="btn-floating modal-trigger waves-effect waves-light red"><i class="fas fa-trash"></i></a>
                 </button>
             </div>
