--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@
                 </div>
                 <!-- Register Button -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large green darken-3">Register <i class="fas fa-sign-in-alt"></i></button>
+                    <button type="submit" class="col s12 btn-large green darken-3" aria-label="register button">Register <i class="fas fa-sign-in-alt"></i></button>
                 </div>
             </div>
         </form>
